bdr.BDR2.scala.code
while (estSurMessage()) {
	litMessage() == "R" => droite();avance()
  litMessage() == "L"=> gauche();avance()
  litMessage() == "I"=> droite();droite(),avance()
	litMessage() == "A"=> avance()
  litMessage() == "B"=> avance();avance()
  litMessage() == "C"=> avance();avance();avance()
	litMessage() == "Z"=> recule()
 	litMessage() == "Y"=> recule();recule()
 	litMessage() == "X"=>recule();recule();recule()
}
